Fix mobile menu after nowrap change messed it up a little

--- a/web/app/themes/tgp-theme/assets/styles/layouts/_header.scss
+++ b/web/app/themes/tgp-theme/assets/styles/layouts/_header.scss
@@ -264,6 +264,9 @@
                 transform: translateX(0);
             }
         
+            #menu-main-menu {
+                white-space: normal;
+            }
             #menu-main-menu > .menu-item {
                 position: relative;
                 display: block;
